Standardize Windows installer for AppFleet